--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ tailwind.config = {
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="hover:text-loomDeep" href="index.html">Home</a>
       <a class="hover:text-loomDeep" href="programs.html">Programs</a>
-      <a class="hover:text-loomDeep" href="about.html">About</a>
+      <a href="about.html" class="nav-active">About</a>
       <a class="hover:text-loomDeep" href="gallery.html">Gallery</a>
       <a class="hover:text-loomDeep" href="faq.html">FAQ</a>
       <a class="hover:text-loomDeep" href="get-involved.html">Get Involved</a>
