Update Gallery link to be active in navigation

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
       <a href="index.html" class="hover:text-loomDeep">Home</a>
       <a href="programs.html" class="hover:text-loomDeep">Programs</a>
       <a href="about.html" class="hover:text-loomDeep">About</a>
-      <a href="gallery.html" class="hover:text-loomDeep">Gallery</a>
+      <a href="gallery.html" class="nav-active">Gallery</a>
       <a href="faq.html" class="hover:text-loomDeep">FAQ</a>
       <a href="get-involved.html" class="hover:text-loomDeep">Get Involved</a>
       <a href="donate.html" class="hover:text-loomDeep">Donate</a>
