Update FAQ link to be active in navigation

--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@ tailwind.config = {
       <a href="programs.html" class="hover:text-loomDeep">Programs</a>
       <a href="about.html" class="hover:text-loomDeep">About</a>
       <a href="gallery.html" class="hover:text-loomDeep">Gallery</a>
-      <a href="faq.html" class="hover:text-loomDeep">FAQ</a>
+      <a href="faq.html" class="nav-active">FAQ</a>
       <a href="get-involved.html" class="hover:text-loomDeep">Get Involved</a>
       <a href="donate.html" class="hover:text-loomDeep">Donate</a>
       <a href="contact.html" class="hover:text-loomDeep">Contact</a>
