Update Donate link to be active in navigation

--- a/donate.html
+++ b/donate.html
@@ -18,7 +18,7 @@
       <a href="gallery.html" class="hover:text-loomDeep">Gallery</a>
       <a href="faq.html" class="hover:text-loomDeep">FAQ</a>
       <a href="get-involved.html" class="hover:text-loomDeep">Get Involved</a>
-      <a href="donate.html" class="hover:text-loomDeep">Donate</a>
+      <a href="donate.html" class="nav-active">Donate</a>
       <a href="contact.html" class="hover:text-loomDeep">Contact</a>
       <a href="donate.html" class="ml-4 inline-block bg-loomBlue text-white px-4 py-2 rounded-full text-sm hover:bg-loomDeep transition">Donate</a>
     </nav>
