--- a/index.html
+++ b/index.html
@@ -119,9 +119,13 @@ window.addEventListener('scroll', function(){
         </a>
       </div>
     </div>
-    <div class="rounded-3xl overflow-hidden shadow-2xl bg-white/5 h-96 flex items-center justify-center">
-      <div class="text-white/70">[Hero Image Placeholder]</div>
-    </div>
+    <div class="rounded-3xl overflow-hidden shadow-2xl h-96">
+  <img
+    src="assets/img/hero.jpg"
+    alt="Students participating in LoomPath STEM activities"
+    class="w-full h-full object-cover"
+  >
+</div>
   </div>
 </section>
 
