--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ window.addEventListener('scroll', function(){
     </div>
     <div class="rounded-3xl overflow-hidden shadow-2xl h-96">
   <img
-    src="assets/img/hero.jpg"
+    src="assets/img/hero.jpeg"
     alt="Students participating in LoomPath STEM activities"
     class="w-full h-full object-cover"
   >
