Adjust image positioning in about.html

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@ window.addEventListener('scroll', function(){
     <img
       src="assets/img/founder.jpeg"
       alt="Founder of LoomPath"
-      class="w-full h-full object-cover"
+      class="w-full h-full object-cover object-[50%_30%]"
       loading="lazy">
   </div>
 </section>
