--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ window.addEventListener('scroll', function(){
 
   </div>
 
-  <div class="rounded-2xl overflow-hidden bg-gray-100 h-80">
+  <div class="rounded-2xl overflow-hidden bg-gray-100 h-96 md:h-80 shadow-lg">
     <img
       src="assets/img/founder.jpeg"
       alt="Founder of LoomPath"
