--- a/about.html
+++ b/about.html
@@ -111,11 +111,11 @@ window.addEventListener('scroll', function(){
 
   </div>
 
-  <div class="rounded-2xl overflow-hidden bg-gray-100 h-64 md:h-80 shadow-lg">
+  <div class="rounded-2xl overflow-hidden shadow-lg h-80">
   <img
     src="assets/img/founder.jpeg"
     alt="Aaren Bhandari, Founder of LoomPath"
-    class="w-full h-full object-cover object-[50%_25%]"
+    class="w-full h-full object-cover object-top"
     loading="lazy"
   >
 </div>
